@@ -3,6 +3,7 @@
 *
 
 - Improved server startup time
+- Added server startup event SYS_SERVER_STARTED
 - Fixed issues:
 	NX-1477 (Offline data collection does not cleanup old data if there are no connection with the server)
 
